--- a/td1.ipynb
+++ b/td1.ipynb
@@ -721,98 +721,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# EX 23\n",
-    "import turtle as tr\n",
-    "\n",
-    "class Tree:\n",
-    "    def __init__(self, data, left=None, middle_left=None, middle_right=None, right=None):\n",
-    "        self.data = data\n",
-    "        self.left = left\n",
-    "        self.middle_left = middle_left\n",
-    "        self.middle_right = middle_right\n",
-    "        self.right = right\n",
-    "\n",
-    "def create_root(length: int, level: int):\n",
-    "    res = Tree(length)\n",
-    "    if level == 0:\n",
-    "        return res\n",
-    "    else:\n",
-    "        res.data = None\n",
-    "        length = length/(3**level)\n",
-    "        res.left = create_node(length, level-1)\n",
-    "        res.middle_left = create_node(length, level-1)\n",
-    "        res.middle_right = create_node(length, level-1)\n",
-    "        res.right = create_node(length, level-1)\n",
-    "        return res\n",
-    "\n",
-    "def create_node(length, level: int):\n",
-    "    res = Tree(length)\n",
-    "    if level == 0:\n",
-    "        return res\n",
-    "    else:\n",
-    "        res.data = None\n",
-    "        res.left = create_node(length, level-1)\n",
-    "        res.middle_left = create_node(length, level-1)\n",
-    "        res.middle_right = create_node(length, level-1)\n",
-    "        res.right = create_node(length, level-1)\n",
-    "        return res\n",
-    "\n",
-    "def draw_node(node: Tree, t: tr.Turtle):\n",
-    "    # None\n",
-    "    if node is None:\n",
-    "        return\n",
-    "    # intern node\n",
-    "    if node.data is None:\n",
-    "        draw_node(node.left, t)\n",
-    "        # turn left\n",
-    "        t.left(60)\n",
-    "        draw_node(node.middle_left, t)\n",
-    "        # turn right\n",
-    "        t.right(120)\n",
-    "        draw_node(node.middle_right, t)\n",
-    "        # turn to original direction\n",
-    "        t.left(60)\n",
-    "        draw_node(node.right, t)\n",
-    "    # leaf\n",
-    "    else:\n",
-    "        t.forward(node.data)\n",
-    "\n",
-    "def print_tree(node: Tree, level: int):\n",
-    "    if node is None:\n",
-    "        return\n",
-    "    print(level*'\\t', node.data)\n",
-    "    print_tree(node.left, level + 1)\n",
-    "    print_tree(node.middle_left, level + 1)\n",
-    "    print_tree(node.middle_right, level + 1)\n",
-    "    print_tree(node.right, level + 1)\n",
-    "\n",
     "def koch(n: int, l: float):\n",
-    "    root = create_root(length=l, level=n)\n",
-    "    length = l/(3**n)\n",
-    "    # print_tree(root, 0)\n",
     "    # setup turtle\n",
     "    canvas = tr.Screen()  \n",
     "    # setup the screen size\n",
-    "    # canvas.setup(width=3*l, height=7/2*l)\n",
     "    tr.TurtleScreen._RUNNING=True\n",
     "    t = tr.Turtle()\n",
     "    t.penup()\n",
     "    # t.setpos(-2/3*l, -2/3*l)\n",
     "    t.setx(-l/2)\n",
     "    t.pendown()\n",
-    "    draw_node(root, t)\n",
-    "    canvas.exitonclick()\n",
-    "\n",
-    "\n"
+    "    # main recursion\n",
+    "    def koch2(n: int, l: float, t: tr.Turtle):\n",
+    "        if n == 0:\n",
+    "            t.forward(l)\n",
+    "        else:\n",
+    "            koch2(n-1, l/3, t)\n",
+    "            t.left(60)\n",
+    "            koch2(n-1, l/3, t)\n",
+    "            t.right(120)\n",
+    "            koch2(n-1, l/3, t)\n",
+    "            t.left(60)\n",
+    "            koch2(n-1, l/3, t)\n",
+    "    koch2(n, l, t)\n",
+    "    canvas.exitonclick()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -821,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
