--- a/td3.ipynb
+++ b/td3.ipynb
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,22 +248,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def somme_des_carres(l):\n",
-    "    return list(map(lambda x: x**2, l))\n",
+    "    return reduce(lambda s, x: s + x, list(map(lambda x: x**2, l)), 0)\n",
     "\n",
     "\n",
-    "assert somme_des_carres([1, 2, 3]) == [1, 4, 9]\n",
-    "assert somme_des_carres([0, -2, 100 * 3]) == [0, 4, 90000]\n",
-    "assert somme_des_carres([]) == []\n"
+    "assert somme_des_carres([1, 2, 3]) == 14\n",
+    "assert somme_des_carres([0, -2, 100 * 3]) == (100*3)**2 + 4\n",
+    "assert somme_des_carres([]) == 0\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,12 +294,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def permute(l):\n",
-    "    # replace 0 by 1 and 1 by 0\n",
+    "    \"\"\"replace 0 by 1 and 1 by 0\"\"\"\n",
     "    assert len(set(l)) <= 2\n",
     "    return list(map(lambda x: 1 - x, l))\n",
     "\n",
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,32 +329,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def pgs(v, l):\n",
-    "    ''' renvoie la longueur de la plus grande séquence de v dans la liste l. '''\n",
-    "    # return reduce(lambda res, x: if x == v , l, [])\n",
-    "    pass\n",
-    "\n",
-    "def pgs2(v, l):\n",
-    "    true_false_table = list(map(lambda x: x == v, l))\n",
-    "    cpt = 0\n",
-    "    len_table = list()\n",
-    "    for i in true_false_table:\n",
-    "        if i:\n",
-    "            cpt += 1\n",
-    "        else:\n",
-    "            cpt = 0\n",
-    "            len_table.append(cpt)\n",
-    "    return max(len_table)\n",
+    "    \"\"\"\n",
+    "    renvoie la longueur de la plus grande séquence de v dans la liste l.\n",
+    "    \"\"\"\n",
+    "    return maximum(reduce(lambda l, x: l + [l[-1] + 1] if x == v else l + [0], l, [0]))\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "    \n"
+    "assert pgs(0, [0, 1, 0, 1]) == 1\n",
+    "assert pgs(2, [1, 0, 1, 0, 2]) == 1\n",
+    "assert pgs(0, [0, 0, 0, 0]) == 4\n",
+    "assert pgs(0, [1, 1, 1, 1]) == 0\n",
+    "assert pgs(0, []) == 0\n",
+    "assert pgs(0, [0, 0, 1, 1, 0, 0, 0, 1, 0]) == 3\n",
+    "assert pgs('a', ['a', 'a', 'b', 'a', 'a', 'a', 'b', 'a', 'a']) == 3\n"
    ]
   },
   {
