--- a/td3.ipynb
+++ b/td3.ipynb
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +337,7 @@
     "    \"\"\"\n",
     "    renvoie la longueur de la plus grande séquence de v dans la liste l.\n",
     "    \"\"\"\n",
-    "    return maximum(reduce(lambda l, x: l + [l[-1] + 1] if x == v else l + [0], l, [0]))\n",
+    "    return maximum(reduce(lambda la_liste, x: la_liste + [la_liste[-1] + 1] if x == v else la_liste + [0], l, [0]))\n",
     "\n",
     "\n",
     "assert pgs(0, [0, 1, 0, 1]) == 1\n",
@@ -348,13 +348,6 @@
     "assert pgs(0, [0, 0, 1, 1, 0, 0, 0, 1, 0]) == 3\n",
     "assert pgs('a', ['a', 'a', 'b', 'a', 'a', 'a', 'b', 'a', 'a']) == 3\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
